--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ license: perl
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Gravatar-URL
   license: http://dev.perl.org/licenses/
-  repository: http://svn.schwern.org/svn/CPAN/Gravatar-URL
+  repository: http://github.com/schwern/gravatar-url/tree/master
 requires:
   Carp: 0
   Digest::MD5: 0
