--- a/META.yml
+++ b/META.yml
@@ -15,10 +15,11 @@ requires:
   perl: 5.6.0
 build_requires:
   Test::More: 0.4
+  Test::Warn: 0.11
 provides:
   Gravatar::URL:
     file: lib/Gravatar/URL.pm
-    version: 1.00
+    version: 1.01
 generated_by: Module::Build version 0.32
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
