--- a/META.yml
+++ b/META.yml
@@ -6,7 +6,7 @@ build_requires:
   Test::Warn: 0.11
 configure_requires:
   Module::Build: 0.2808
-generated_by: 'Module::Build version 0.3601'
+generated_by: 'Module::Build version 0.3603'
 keywords:
   - Gravatar
 license: perl
@@ -17,14 +17,18 @@ name: Gravatar-URL
 provides:
   Gravatar::URL:
     file: lib/Gravatar/URL.pm
-    version: 1.01
+    version: 1.02
+  Unicornify::URL:
+    file: lib/Unicornify/URL.pm
+    version: 1.02
 requires:
   Carp: 0
   Digest::MD5: 0
   URI::Escape: 0
+  parent: 0
   perl: v5.6.0
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Gravatar-URL
   license: http://dev.perl.org/licenses/
   repository: http://github.com/schwern/gravatar-url/tree/master
-version: 1.01
+version: 1.02
