--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,29 @@
 ---
-name: Gravatar-URL
-version: 1.04
+abstract: 'Make URLs for Gravatars from an email address'
 author: []
-abstract: Make URLs for Gravatars from an email address
-license: perl
-resources:
-  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Gravatar-URL
-  license: http://dev.perl.org/licenses/
-  repository: http://github.com/schwern/gravatar-url/tree/master
 build_requires:
   Test::More: 0.4
   Test::Warn: 0.11
+configure_requires:
+  Module::Build: 0.2808
+generated_by: 'Module::Build version 0.3603'
+keywords:
+  - Gravatar
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Gravatar-URL
+provides:
+  Gravatar::URL:
+    file: lib/Gravatar/URL.pm
+    version: 1.05
+  Libravatar::URL:
+    file: lib/Libravatar/URL.pm
+    version: 1.05
+  Unicornify::URL:
+    file: lib/Unicornify/URL.pm
+    version: 1.05
 requires:
   Carp: 0
   Digest::MD5: 0
@@ -19,21 +32,8 @@ requires:
   URI::Escape: 0
   parent: 0
   perl: v5.6.0
-configure_requires:
-  Module::Build: 0.2808
-provides:
-  Gravatar::URL:
-    file: lib/Gravatar/URL.pm
-    version: 1.04
-  Libravatar::URL:
-    file: lib/Libravatar/URL.pm
-    version: 1.04
-  Unicornify::URL:
-    file: lib/Unicornify/URL.pm
-    version: 1.04
-generated_by: Module::Build version 0.340201
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
-keywords:
-  - Gravatar
+resources:
+  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Gravatar-URL
+  license: http://dev.perl.org/licenses/
+  repository: http://github.com/schwern/gravatar-url/tree/master
+version: 1.05
