--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,14 @@
 ---
 abstract: 'Make URLs for Gravatars from an email address'
-author: []
+author:
+  - unknown
 build_requires:
   Test::More: 0.4
   Test::Warn: 0.11
 configure_requires:
   Module::Build: 0.2808
-generated_by: 'Module::Build version 0.3603'
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.112621'
 keywords:
   - Gravatar
 license: perl
@@ -17,13 +19,13 @@ name: Gravatar-URL
 provides:
   Gravatar::URL:
     file: lib/Gravatar/URL.pm
-    version: 1.05
+    version: 1.06
   Libravatar::URL:
     file: lib/Libravatar/URL.pm
-    version: 1.05
+    version: 1.06
   Unicornify::URL:
     file: lib/Unicornify/URL.pm
-    version: 1.05
+    version: 1.06
 requires:
   Carp: 0
   Digest::MD5: 0
@@ -36,4 +38,4 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Gravatar-URL
   license: http://dev.perl.org/licenses/
   repository: http://github.com/schwern/gravatar-url/tree/master
-version: 1.05
+version: 1.06
